Create JSON configs

--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -4,6 +4,10 @@
     "perspectives": {
         "searchPerspectives": [
             "manuscripts",
+            "works",
+            "events",
+            "actors",
+            "places",
             "fullTextSearch"
         ],
         "onlyInstancePages": [
