--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -42,7 +42,7 @@
     "layoutConfig": {
         "colorPalette": {
             "primary": {
-                "main": "#212121"
+                "main": "#673ab7"
             },
             "secondary": {
                 "main": "#EB1806"
